After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 638350 - changing the passphrase does not ask for confirmation
changing the passphrase does not ask for confirmation
Status: RESOLVED FIXED
Product: seahorse
Classification: Applications
Component: general
2.30.x
Other Linux
: Normal normal
: 2.26.0
Assigned To: Seahorse Maintainer
Seahorse Maintainer
Depends on:
Blocks:
 
 
Reported: 2010-12-30 14:48 UTC by bart
Modified: 2011-03-10 15:35 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description bart 2010-12-30 14:48:41 UTC
In seahorse 2.30.1:

-go to "my personal keys tab"
-select key
-go to properties
-select "change passphrase"
-type old phrase
-type new phrase

In my opinion seahorse should ask to retype the passphrase at this point, otherwise a lot of data/backups could become unreadable with just one typo!
Comment 1 Stef Walter 2010-12-31 13:50:36 UTC
What kind of key was it? And do you know if a GPG agent is doing the prompting? I'd be able to tell from a screenshot of the password prompt.
Comment 2 bart 2011-01-01 14:35:00 UTC
(In reply to comment #1)
> What kind of key was it? And do you know if a GPG agent is doing the prompting?
> I'd be able to tell from a screenshot of the password prompt.

It was a private PGP key. (BTW isn't that a typo in the properties window? Shouldn't it say GPG? I created the key with seahorse)

screenshot:http://img529.imageshack.us/i/passphrase002.png/
Comment 3 Fabio Durán Verdugo 2011-02-16 03:10:14 UTC
the information is provide, reopen...
Comment 4 Stef Walter 2011-03-10 15:35:08 UTC
Thanks. Fixed. This change will be in seahorse 3.0


commit 9335671cc5fc6e626dbb322b8894ffded7ce7ddb
Author: Stef Walter <stefw@collabora.co.uk>
Date:   Thu Mar 10 16:34:09 2011 +0100

    When changing a PGP key's passpharse, ask for confirmation.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=638350