When changing a PGP key's passpharse, ask for confirmation.

https://bugzilla.gnome.org/show_bug.cgi?id=638350